--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-        <button id="showAll">Show All</button>
-        <button id="hideAll">Hide All </button>
+<!--         <button id="showAll">Show All</button>
+        <button id="hideAll">Hide All </button> -->
+        <button id="hideQ">Hide in order  </button>
+        <button id="showQ">Show in order  </button>
 
 
     <div class="top">
